# launchbox

./: README.md  architecture.md
backend/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/routes/: health.py
