[tool.poetry]
name = "idg-backend"
version = "0.1.0"
description = "Instant Dev Environment Generator API"
authors = ["Andy Luo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.12.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"
